# chicken-shoo-shoo

./: audiorecorder.cpp  audiorecorder.h  avatar.cpp  avatar.h  button.cpp  button.h  chicken-shoo-shoo.pro  chicken-shoo-shoo.pro.user.0b1e5b0  chicken.cpp  chicken.h  drawable.cpp  drawable.h  game.cpp  game.h  inputhandler.cpp  inputhandler.h  level.cpp  level.h  levelloader.cpp  levelloader.h  main.cpp  menu.cpp  menu.h  rectangle.cpp  rectangle.h  spikes.cpp  spikes.h  testbase.cpp  testbase.h  testchild.cpp  testchild.h  tile.cpp  tile.h  timehandler.cpp  timehandler.h  utils.cpp  utils.h
build-chicken-shoo-shoo-Desktop_Qt_6_0_3_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release
build-chicken-shoo-shoo-Desktop_Qt_6_0_3_MinGW_64_bit-Profile/: Makefile  Makefile.Debug  Makefile.Release  (+2 more)
chicken-shoo-shoo/chicken-shoo-shoo/: CMakeLists.txt  avatar.cpp  avatar.h  camera.cpp  camera.h  chicken-shoo-shoo-Info.plist  chicken-shoo-shoo.pro  drawable.cpp  drawable.h  game.cpp  level.h  levelloader.cpp  main.cpp  rectangle.cpp  tile.h  utils.cpp  utils.h
chicken-shoo-shoo/chicken-shoo-shoo/build-chicken-shoo-shoo-Desktop_Qt_6_0_3_MinGW_64_bit-Debug/: Makefile
chicken-shoo-shoo/chicken-shoo-shoo/build-chicken-shoo-shoo-Desktop_Qt_6_0_3_MinGW_64_bit-Profile/: Makefile.Release  object_script.chicken-shoo-shoo.Debug
chicken-shoo-shoo/chicken-shoo-shoo/build-chicken-shoo-shoo-Desktop_Qt_6_0_3_MinGW_64_bit-Profile/release/: chicken-shoo-shoo.exe.debug
chicken-shoo-shoo/chicken-shoo-shoo/build-chicken-shoo-shoo-Desktop_Qt_6_0_3_MinGW_64_bit-Release/: Makefile
(+6 files in other folders)
